Fix the np.asarray error

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMZjwNDFlbw+P9seO+KkpST",
+      "authorship_tag": "ABX9TyPWYdi2ihHNvsroPwmUCYlR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "1f1a77eb-b510-4313-addd-eee899bd0483"
+        "outputId": "cbd36fef-fe53-4754-d00e-a3a709da2279"
       },
-      "execution_count": 74,
+      "execution_count": 104,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "1d29ecc6-f208-4189-fa53-1882a58f36e5"
+        "outputId": "a891f77a-cfce-4693-a1f0-44ef799e7094"
       },
-      "execution_count": 75,
+      "execution_count": 105,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": 76,
+      "execution_count": 106,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": 77,
+      "execution_count": 107,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": 78,
+      "execution_count": 108,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": 79,
+      "execution_count": 109,
       "outputs": []
     },
     {
@@ -347,9 +347,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dcbaf5f8-dec1-47fe-dbcd-6fcefbe4682b"
+        "outputId": "750a8d76-5dfe-45df-d988-368c87b551c5"
       },
-      "execution_count": 80,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "M-Z45KTIERWa"
       },
-      "execution_count": 81,
+      "execution_count": 111,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
       "metadata": {
         "id": "2gqK3pHwn2fI"
       },
-      "execution_count": 82,
+      "execution_count": 112,
       "outputs": []
     },
     {
@@ -559,12 +559,12 @@
         "\n",
         "        for i in ind:\n",
         "            s, a, s_, r, d, g = self.buffer[i]\n",
-        "            states.append(np.array(s, copy=False))\n",
-        "            actions.append(np.array(a, copy=False))\n",
-        "            next_states.append(np.array(s_, copy=False))\n",
-        "            rewards.append(np.array(r, copy=False))\n",
-        "            dones.append(np.array(d, copy=False))\n",
-        "            goals.append(np.array(g, copy=False))\n",
+        "            states.append(np.asarray(s))\n",
+        "            actions.append(np.asanyarrayarray(a))\n",
+        "            next_states.append(np.asarray(s_))\n",
+        "            rewards.append(np.asarray(r))\n",
+        "            dones.append(np.asarray(d))\n",
+        "            goals.append(np.asarray(g))\n",
         "\n",
         "        return (\n",
         "            torch.FloatTensor(np.array(states)).to(device),\n",
@@ -581,7 +581,7 @@
       "metadata": {
         "id": "wTSR0ghzEUsw"
       },
-      "execution_count": 83,
+      "execution_count": 113,
       "outputs": []
     },
     {
@@ -689,7 +689,7 @@
       "metadata": {
         "id": "eqZs2BMEEXvl"
       },
-      "execution_count": 84,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -730,7 +730,7 @@
         "    n_timesteps = 100\n",
         "\n",
         "    if debug:\n",
-        "      n_epochs = 1\n",
+        "      n_epochs = 2\n",
         "      n_cycles = 2\n",
         "      n_episodes = 2\n",
         "      n_timesteps = 2\n",
@@ -814,7 +814,7 @@
       "metadata": {
         "id": "hHW4ypdpEdfq"
       },
-      "execution_count": 85,
+      "execution_count": 115,
       "outputs": []
     },
     {
@@ -837,9 +837,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "47b767e4-41e9-41df-da74-2e17d7978772"
+        "outputId": "3e643cb5-d00a-4505-bab3-18b806f4e41f"
       },
-      "execution_count": 86,
+      "execution_count": 116,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +848,8 @@
             "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
             "Action space: Box(-1.0, 1.0, (4,), float32)\n",
             "Starting training...\n",
-            "Epoch 1/1, Success Rate: 0.00\n"
+            "Epoch 1/2, Success Rate: 0.00\n",
+            "Epoch 2/2, Success Rate: 0.00\n"
           ]
         }
       ]
@@ -885,7 +886,7 @@
       "metadata": {
         "id": "k8VCf1wONwsU"
       },
-      "execution_count": 87,
+      "execution_count": 117,
       "outputs": []
     },
     {
@@ -1035,7 +1036,7 @@
       "metadata": {
         "id": "cnwxqu6fEpvI"
       },
-      "execution_count": 88,
+      "execution_count": 118,
       "outputs": []
     },
     {
@@ -1058,9 +1059,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "66f91aea-e2ed-4779-fd0f-801e7cfb94a6"
+        "outputId": "ad8e60a1-e62e-4711-c848-9769c04bc22a"
       },
-      "execution_count": 89,
+      "execution_count": 119,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,7 +1081,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 89
+          "execution_count": 119
         }
       ]
     }
