Typo fix in asarray

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPWYdi2ihHNvsroPwmUCYlR",
+      "authorship_tag": "ABX9TyNS145gh66c4m99B+EI9DTz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "cbd36fef-fe53-4754-d00e-a3a709da2279"
+        "outputId": "cc669dea-e654-4f12-f075-917d78f91991"
       },
-      "execution_count": 104,
+      "execution_count": 133,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "a891f77a-cfce-4693-a1f0-44ef799e7094"
+        "outputId": "a205cbeb-a797-40c4-eac4-4e7cd73229bc"
       },
-      "execution_count": 105,
+      "execution_count": 134,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": 106,
+      "execution_count": 135,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": 107,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": 108,
+      "execution_count": 137,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": 109,
+      "execution_count": 138,
       "outputs": []
     },
     {
@@ -347,9 +347,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "750a8d76-5dfe-45df-d988-368c87b551c5"
+        "outputId": "4b8e5c36-52db-477f-f380-e17bb52888b7"
       },
-      "execution_count": 110,
+      "execution_count": 139,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "M-Z45KTIERWa"
       },
-      "execution_count": 111,
+      "execution_count": 140,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
       "metadata": {
         "id": "2gqK3pHwn2fI"
       },
-      "execution_count": 112,
+      "execution_count": 141,
       "outputs": []
     },
     {
@@ -560,7 +560,7 @@
         "        for i in ind:\n",
         "            s, a, s_, r, d, g = self.buffer[i]\n",
         "            states.append(np.asarray(s))\n",
-        "            actions.append(np.asanyarrayarray(a))\n",
+        "            actions.append(np.asarray(a))\n",
         "            next_states.append(np.asarray(s_))\n",
         "            rewards.append(np.asarray(r))\n",
         "            dones.append(np.asarray(d))\n",
@@ -581,7 +581,7 @@
       "metadata": {
         "id": "wTSR0ghzEUsw"
       },
-      "execution_count": 113,
+      "execution_count": 142,
       "outputs": []
     },
     {
@@ -689,7 +689,7 @@
       "metadata": {
         "id": "eqZs2BMEEXvl"
       },
-      "execution_count": 114,
+      "execution_count": 143,
       "outputs": []
     },
     {
@@ -814,7 +814,7 @@
       "metadata": {
         "id": "hHW4ypdpEdfq"
       },
-      "execution_count": 115,
+      "execution_count": 144,
       "outputs": []
     },
     {
@@ -837,9 +837,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e643cb5-d00a-4505-bab3-18b806f4e41f"
+        "outputId": "657590e4-8d33-4642-fcfd-5efb2d21d8a6"
       },
-      "execution_count": 116,
+      "execution_count": 145,
       "outputs": [
         {
           "output_type": "stream",
@@ -886,7 +886,7 @@
       "metadata": {
         "id": "k8VCf1wONwsU"
       },
-      "execution_count": 117,
+      "execution_count": 146,
       "outputs": []
     },
     {
@@ -1036,7 +1036,7 @@
       "metadata": {
         "id": "cnwxqu6fEpvI"
       },
-      "execution_count": 118,
+      "execution_count": 147,
       "outputs": []
     },
     {
@@ -1059,9 +1059,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad8e60a1-e62e-4711-c848-9769c04bc22a"
+        "outputId": "7508bea0-7bc1-4988-fc2d-fd1f87280ef7"
       },
-      "execution_count": 119,
+      "execution_count": 148,
       "outputs": [
         {
           "output_type": "stream",
@@ -1081,7 +1081,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 119
+          "execution_count": 148
         }
       ]
     }
