Add possibility to switch between Gaussian and OU noises

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNS145gh66c4m99B+EI9DTz",
+      "authorship_tag": "ABX9TyPlo5FuqxQuG5/k/rymNyFe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "cc669dea-e654-4f12-f075-917d78f91991"
+        "outputId": "2428a09c-ffe6-479e-dd90-18c886a8be44"
       },
-      "execution_count": 133,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +173,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "a205cbeb-a797-40c4-eac4-4e7cd73229bc"
+        "outputId": "5f7aa129-2a6e-49f2-85f9-496c1839d794"
       },
-      "execution_count": 134,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": 135,
+      "execution_count": 190,
       "outputs": []
     },
     {
@@ -264,7 +264,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": 136,
+      "execution_count": 191,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": 137,
+      "execution_count": 192,
       "outputs": []
     },
     {
@@ -315,7 +315,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": 138,
+      "execution_count": 193,
       "outputs": []
     },
     {
@@ -347,9 +347,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b8e5c36-52db-477f-f380-e17bb52888b7"
+        "outputId": "a91ea359-8fb5-46c9-d839-187393a26fd7"
       },
-      "execution_count": 139,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
       "metadata": {
         "id": "M-Z45KTIERWa"
       },
-      "execution_count": 140,
+      "execution_count": 195,
       "outputs": []
     },
     {
@@ -465,7 +465,7 @@
       "metadata": {
         "id": "2gqK3pHwn2fI"
       },
-      "execution_count": 141,
+      "execution_count": 196,
       "outputs": []
     },
     {
@@ -581,7 +581,7 @@
       "metadata": {
         "id": "wTSR0ghzEUsw"
       },
-      "execution_count": 142,
+      "execution_count": 197,
       "outputs": []
     },
     {
@@ -618,7 +618,7 @@
         "        self.gamma = 0.98 # arbitrary, I don't see it in the paper\n",
         "        self.tau = 0.95 # from the fetch paper - surprisingly very high\n",
         "\n",
-        "    def select_action(self, observation, noise):\n",
+        "    def select_action(self, observation, noise, noise_type=\"Gaussian\"):\n",
         "        \"\"\"Select action based on observation dictionary\"\"\"\n",
         "        # Create input by concatenating state and goal\n",
         "        state = observation[\"observation\"]\n",
@@ -630,7 +630,7 @@
         "            action = self.actor(state_goal).cpu().data.numpy().flatten()\n",
         "\n",
         "        # Add noise for exploration\n",
-        "        if noise > 0:\n",
+        "        if noise > 0 and noise_type == \"OU\":\n",
         "          # We check if the subprocess is not already running\n",
         "          if not hasattr(self, 'noise_process'):\n",
         "            self.noise_process = OrnsteinUhlenbeckNoise(\n",
@@ -640,6 +640,9 @@
         "                sigma=0.2   # from the continuous control paper\n",
         "            )\n",
         "            action = action + noise * self.noise_process.sample()\n",
+        "\n",
+        "        if noise > 0 and noise_type == \"Gaussian\":\n",
+        "            action = action + np.random.normal(0, noise, size=action.shape)\n",
         "\n",
         "        return np.clip(action, -self.max_action, self.max_action)\n",
         "\n",
@@ -689,7 +692,7 @@
       "metadata": {
         "id": "eqZs2BMEEXvl"
       },
-      "execution_count": 143,
+      "execution_count": 198,
       "outputs": []
     },
     {
@@ -723,10 +726,10 @@
         "    agent = DDPG_HER(state_dim, action_dim, goal_dim, max_action)\n",
         "\n",
         "    # Training parameters - increased for better learning\n",
-        "    n_epochs = 20 # from the fetch paper results we should converge by that time\n",
+        "    n_epochs = 30 # from the fetch paper results we should converge by that time\n",
         "    n_cycles = 50 # from the fetch paper\n",
         "    # In the paper they trained on cpu 19 cores, I don't really understand their calculations so these two are arbitrary\n",
-        "    n_episodes = 8\n",
+        "    n_episodes = 16\n",
         "    n_timesteps = 100\n",
         "\n",
         "    if debug:\n",
@@ -761,7 +764,7 @@
         "\n",
         "                for t in range(n_timesteps):\n",
         "                    # Select action with noise for exploration\n",
-        "                    action = agent.select_action(obs_dict, noise=1.0) # TODO: gradually decay the noise\n",
+        "                    action = agent.select_action(obs_dict, noise=0.2) # TODO: gradually decay the noise\n",
         "\n",
         "                    # Execute action\n",
         "                    next_obs_dict, reward, terminated, truncated, info = env.step(action)\n",
@@ -814,7 +817,7 @@
       "metadata": {
         "id": "hHW4ypdpEdfq"
       },
-      "execution_count": 144,
+      "execution_count": 199,
       "outputs": []
     },
     {
@@ -830,16 +833,16 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "actor, success_history, reward_history = train_ddpg_with_her(env, debug = True)"
+        "actor, success_history, reward_history = train_ddpg_with_her(env, debug = False)"
       ],
       "metadata": {
         "id": "RFjtGaLkEg3H",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "657590e4-8d33-4642-fcfd-5efb2d21d8a6"
+        "outputId": "1808dbc3-a635-4ba1-b0af-a7d9dd57da6f"
       },
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,8 +851,10 @@
             "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
             "Action space: Box(-1.0, 1.0, (4,), float32)\n",
             "Starting training...\n",
-            "Epoch 1/2, Success Rate: 0.00\n",
-            "Epoch 2/2, Success Rate: 0.00\n"
+            "Epoch 1/30, Success Rate: 0.00\n",
+            "Epoch 2/30, Success Rate: 0.00\n",
+            "Epoch 3/30, Success Rate: 0.00\n",
+            "Epoch 4/30, Success Rate: 0.03\n"
           ]
         }
       ]
@@ -886,7 +891,7 @@
       "metadata": {
         "id": "k8VCf1wONwsU"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1036,7 +1041,7 @@
       "metadata": {
         "id": "cnwxqu6fEpvI"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1055,35 +1060,10 @@
         "evaluate(actor, env, n_episodes=10)"
       ],
       "metadata": {
-        "id": "aXNrLZZXE0Az",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7508bea0-7bc1-4988-fc2d-fd1f87280ef7"
+        "id": "aXNrLZZXE0Az"
       },
-      "execution_count": 148,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
-            "Action space: Box(-1.0, 1.0, (4,), float32)\n",
-            "Saved sequential animation to FetchReach-v3_eval.gif\n",
-            "Evaluation success rate: 0.00\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 148
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
