Make it consistent when "actor" and "agent" are used. agent is DDPG_HER, actor is nn.Module.

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPBQCbabStvOSktxKdtzwcV",
+      "authorship_tag": "ABX9TyONhf3D6m+4WDZorX/+UvSd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -802,7 +802,7 @@
         "    # Save trained model\n",
         "    torch.save(agent.actor.state_dict(), f\"{env_name}_actor.pth\")\n",
         "\n",
-        "    return agent, success_history"
+        "    return agent.actor, success_history"
       ],
       "metadata": {
         "id": "hHW4ypdpEdfq"
@@ -823,7 +823,7 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "agent, success_history = train_ddpg_with_her(env)"
+        "actor, success_history = train_ddpg_with_her(env)"
       ],
       "metadata": {
         "id": "RFjtGaLkEg3H"
@@ -834,7 +834,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Load the agent from file"
+        "# Load the actor from a file"
       ],
       "metadata": {
         "id": "PZOqo_jnNxcx"
@@ -1029,7 +1029,7 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "evaluate(agent, env, n_episodes=10)"
+        "evaluate(actor, env, n_episodes=10)"
       ],
       "metadata": {
         "id": "aXNrLZZXE0Az"
