Fix the np.asarray error

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyONhf3D6m+4WDZorX/+UvSd",
+      "authorship_tag": "ABX9TyPRzwzF014whyUpAOaImpqW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -587,12 +587,12 @@
         "\n",
         "        for i in ind:\n",
         "            s, a, s_, r, d, g = self.buffer[i]\n",
-        "            states.append(np.array(s, copy=False))\n",
-        "            actions.append(np.array(a, copy=False))\n",
-        "            next_states.append(np.array(s_, copy=False))\n",
-        "            rewards.append(np.array(r, copy=False))\n",
-        "            dones.append(np.array(d, copy=False))\n",
-        "            goals.append(np.array(g, copy=False))\n",
+        "            states.append(np.asarray(s))\n",
+        "            actions.append(np.asarray(a))\n",
+        "            next_states.append(np.asarray(s_))\n",
+        "            rewards.append(np.asarray(r))\n",
+        "            dones.append(np.asarray(d))\n",
+        "            goals.append(np.asarray(g))\n",
         "\n",
         "        return (\n",
         "            torch.FloatTensor(np.array(states)).to(device),\n",
