Add average rewards / epoch collection for a typical learning curve

--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,7 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPRzwzF014whyUpAOaImpqW",
+      "authorship_tag": "ABX9TyMcCd1M0hcnzyk3Yrtn0l0A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -745,12 +745,15 @@
         "\n",
         "    # For evaluation\n",
         "    success_history = []\n",
+        "    # and a typical learning curve\n",
+        "    reward_history = []\n",
         "\n",
         "    # Start training\n",
         "    print(\"Starting training...\")\n",
         "\n",
         "    for epoch in range(n_epochs):\n",
         "        successes = 0\n",
+        "        epoch_rewards = []  # track rewards for all episodes in this epoch\n",
         "\n",
         "        for cycle in range(n_cycles):\n",
         "            for episode in range(n_episodes):\n",
@@ -759,6 +762,7 @@
         "\n",
         "                # Initialize tracking\n",
         "                episode_success = False\n",
+        "                episode_reward = 0\n",
         "\n",
         "                for t in range(n_timesteps):\n",
         "                    # Select action with noise for exploration\n",
@@ -767,6 +771,9 @@
         "                    # Execute action\n",
         "                    next_obs_dict, reward, terminated, truncated, info = env.step(action)\n",
         "                    done = terminated or truncated\n",
+        "\n",
+        "                    # Accumulate rewards\n",
+        "                    episode_reward += reward\n",
         "\n",
         "                    # Store transition in episode buffer\n",
         "                    agent.replay_buffer.add_episode_step(\n",
@@ -786,6 +793,8 @@
         "                # Process episode with HER\n",
         "                agent.replay_buffer.process_episode_with_her(env, k=4)\n",
         "\n",
+        "                epoch_rewards.append(episode_reward)\n",
+        "\n",
         "                if episode_success:\n",
         "                    successes += 1\n",
         "\n",
@@ -793,16 +802,19 @@
         "            for _ in range(40):  # Increased updates per cycle\n",
         "                agent.train()\n",
         "\n",
-        "        # Calculate success rate for this epoch\n",
+        "        # Calculate success rate and rewards for this epoch\n",
         "        success_rate = successes / (n_cycles * n_episodes)\n",
         "        success_history.append(success_rate)\n",
         "\n",
-        "        print(f\"Epoch {epoch+1}/{n_epochs}, Success Rate: {success_rate:.2f}\")\n",
+        "        avg_reward = sum(epoch_rewards) / len(epoch_rewards)\n",
+        "        reward_history.append(avg_reward)\n",
+        "\n",
+        "        print(f\"Epoch {epoch+1}/{n_epochs}, Success Rate: {success_rate:.2f}, Reward: {avg_reward:.2f}\")\n",
         "\n",
         "    # Save trained model\n",
         "    torch.save(agent.actor.state_dict(), f\"{env_name}_actor.pth\")\n",
         "\n",
-        "    return agent.actor, success_history"
+        "    return agent.actor, success_history, reward_history"
       ],
       "metadata": {
         "id": "hHW4ypdpEdfq"
