--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -9,7 +9,6 @@
         "aju8u04MB-Bv"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMcCd1M0hcnzyk3Yrtn0l0A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,9 +103,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Wfi_xhngw0_",
-        "outputId": "13e521ee-1c82-45db-b356-8c98a1229370"
+        "outputId": "dfd30e3c-de44-4140-fbd9-9c499ad3fad0"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -173,9 +172,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "34yIvql3mAWF",
-        "outputId": "27e6fa92-efde-4483-c552-d2e73e61e545"
+        "outputId": "6345bd78-748a-4af1-a3fa-02c57c07d9d3"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,107 +207,13 @@
             "Reading package lists... Done\n",
             "Building dependency tree... Done\n",
             "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  libfontenc1 libxfont2 libxkbfile1 x11-xkb-utils xfonts-base xfonts-encodings xfonts-utils\n",
-            "  xserver-common\n",
-            "The following NEW packages will be installed:\n",
-            "  libfontenc1 libxfont2 libxkbfile1 x11-xkb-utils xfonts-base xfonts-encodings xfonts-utils\n",
-            "  xserver-common xvfb\n",
-            "0 upgraded, 9 newly installed, 0 to remove and 29 not upgraded.\n",
-            "Need to get 7,814 kB of archives.\n",
-            "After this operation, 12.0 MB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu jammy/main amd64 libfontenc1 amd64 1:1.1.4-1build3 [14.7 kB]\n",
-            "Get:2 http://archive.ubuntu.com/ubuntu jammy/main amd64 libxfont2 amd64 1:2.0.5-1build1 [94.5 kB]\n",
-            "Get:3 http://archive.ubuntu.com/ubuntu jammy/main amd64 libxkbfile1 amd64 1:1.1.0-1build3 [71.8 kB]\n",
-            "Get:4 http://archive.ubuntu.com/ubuntu jammy/main amd64 x11-xkb-utils amd64 7.7+5build4 [172 kB]\n",
-            "Get:5 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-encodings all 1:1.0.5-0ubuntu2 [578 kB]\n",
-            "Get:6 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-utils amd64 1:7.7+6build2 [94.6 kB]\n",
-            "Get:7 http://archive.ubuntu.com/ubuntu jammy/main amd64 xfonts-base all 1:1.0.5 [5,896 kB]\n",
-            "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 xserver-common all 2:21.1.4-2ubuntu1.7~22.04.13 [29.1 kB]\n",
-            "Get:9 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 xvfb amd64 2:21.1.4-2ubuntu1.7~22.04.13 [863 kB]\n",
-            "Fetched 7,814 kB in 2s (4,380 kB/s)\n",
-            "Selecting previously unselected package libfontenc1:amd64.\n",
-            "(Reading database ... 125044 files and directories currently installed.)\n",
-            "Preparing to unpack .../0-libfontenc1_1%3a1.1.4-1build3_amd64.deb ...\n",
-            "Unpacking libfontenc1:amd64 (1:1.1.4-1build3) ...\n",
-            "Selecting previously unselected package libxfont2:amd64.\n",
-            "Preparing to unpack .../1-libxfont2_1%3a2.0.5-1build1_amd64.deb ...\n",
-            "Unpacking libxfont2:amd64 (1:2.0.5-1build1) ...\n",
-            "Selecting previously unselected package libxkbfile1:amd64.\n",
-            "Preparing to unpack .../2-libxkbfile1_1%3a1.1.0-1build3_amd64.deb ...\n",
-            "Unpacking libxkbfile1:amd64 (1:1.1.0-1build3) ...\n",
-            "Selecting previously unselected package x11-xkb-utils.\n",
-            "Preparing to unpack .../3-x11-xkb-utils_7.7+5build4_amd64.deb ...\n",
-            "Unpacking x11-xkb-utils (7.7+5build4) ...\n",
-            "Selecting previously unselected package xfonts-encodings.\n",
-            "Preparing to unpack .../4-xfonts-encodings_1%3a1.0.5-0ubuntu2_all.deb ...\n",
-            "Unpacking xfonts-encodings (1:1.0.5-0ubuntu2) ...\n",
-            "Selecting previously unselected package xfonts-utils.\n",
-            "Preparing to unpack .../5-xfonts-utils_1%3a7.7+6build2_amd64.deb ...\n",
-            "Unpacking xfonts-utils (1:7.7+6build2) ...\n",
-            "Selecting previously unselected package xfonts-base.\n",
-            "Preparing to unpack .../6-xfonts-base_1%3a1.0.5_all.deb ...\n",
-            "Unpacking xfonts-base (1:1.0.5) ...\n",
-            "Selecting previously unselected package xserver-common.\n",
-            "Preparing to unpack .../7-xserver-common_2%3a21.1.4-2ubuntu1.7~22.04.13_all.deb ...\n",
-            "Unpacking xserver-common (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Selecting previously unselected package xvfb.\n",
-            "Preparing to unpack .../8-xvfb_2%3a21.1.4-2ubuntu1.7~22.04.13_amd64.deb ...\n",
-            "Unpacking xvfb (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Setting up libfontenc1:amd64 (1:1.1.4-1build3) ...\n",
-            "Setting up xfonts-encodings (1:1.0.5-0ubuntu2) ...\n",
-            "Setting up libxkbfile1:amd64 (1:1.1.0-1build3) ...\n",
-            "Setting up libxfont2:amd64 (1:2.0.5-1build1) ...\n",
-            "Setting up x11-xkb-utils (7.7+5build4) ...\n",
-            "Setting up xfonts-utils (1:7.7+6build2) ...\n",
-            "Setting up xfonts-base (1:1.0.5) ...\n",
-            "Setting up xserver-common (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Setting up xvfb (2:21.1.4-2ubuntu1.7~22.04.13) ...\n",
-            "Processing triggers for man-db (2.10.2-1) ...\n",
-            "Processing triggers for fontconfig (2.13.1-4.2ubuntu5) ...\n",
-            "Processing triggers for libc-bin (2.35-0ubuntu3.8) ...\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libumf.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbb.so.12 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_0.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_loader.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_level_zero.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc.so.2 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libhwloc.so.15 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtcm_debug.so.1 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbbind_2_5.so.3 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libur_adapter_opencl.so.0 is not a symbolic link\n",
-            "\n",
-            "/sbin/ldconfig.real: /usr/local/lib/libtbbmalloc_proxy.so.2 is not a symbolic link\n",
-            "\n",
+            "xvfb is already the newest version (2:21.1.4-2ubuntu1.7~22.04.13).\n",
+            "0 upgraded, 0 newly installed, 0 to remove and 29 not upgraded.\n",
             "Requirement already satisfied: imageio in /usr/local/lib/python3.11/dist-packages (2.37.0)\n",
-            "Collecting ffmpeg\n",
-            "  Downloading ffmpeg-1.4.tar.gz (5.1 kB)\n",
-            "  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting pyvirtualdisplay\n",
-            "  Downloading PyVirtualDisplay-3.0-py3-none-any.whl.metadata (943 bytes)\n",
+            "Requirement already satisfied: ffmpeg in /usr/local/lib/python3.11/dist-packages (1.4)\n",
+            "Requirement already satisfied: pyvirtualdisplay in /usr/local/lib/python3.11/dist-packages (3.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from imageio) (2.0.2)\n",
-            "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.11/dist-packages (from imageio) (11.1.0)\n",
-            "Downloading PyVirtualDisplay-3.0-py3-none-any.whl (15 kB)\n",
-            "Building wheels for collected packages: ffmpeg\n",
-            "  Building wheel for ffmpeg (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for ffmpeg: filename=ffmpeg-1.4-py3-none-any.whl size=6082 sha256=a8c79031028e6bd4e9b3f658df13d4413338c06419641499f1ea01a488ef7ff7\n",
-            "  Stored in directory: /root/.cache/pip/wheels/56/30/c5/576bdd729f3bc062d62a551be7fefd6ed2f761901568171e4e\n",
-            "Successfully built ffmpeg\n",
-            "Installing collected packages: pyvirtualdisplay, ffmpeg\n",
-            "Successfully installed ffmpeg-1.4 pyvirtualdisplay-3.0\n"
+            "Requirement already satisfied: pillow>=8.3.2 in /usr/local/lib/python3.11/dist-packages (from imageio) (11.1.0)\n"
           ]
         }
       ]
@@ -331,7 +236,7 @@
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -362,7 +267,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -399,7 +304,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -413,7 +318,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -441,10 +346,22 @@
         "print(f\"Using device: {device}\")"
       ],
       "metadata": {
-        "id": "PxCveEDglZzN"
+        "id": "PxCveEDglZzN",
+        "outputId": "2eca49dd-2c07-4266-91fe-4aca2617278d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using device: cuda\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -493,7 +410,7 @@
       "metadata": {
         "id": "M-Z45KTIERWa"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -609,7 +526,7 @@
       "metadata": {
         "id": "wTSR0ghzEUsw"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -704,7 +621,7 @@
       "metadata": {
         "id": "eqZs2BMEEXvl"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -819,7 +736,7 @@
       "metadata": {
         "id": "hHW4ypdpEdfq"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -835,13 +752,37 @@
       "cell_type": "code",
       "source": [
         "env = create_env()\n",
-        "actor, success_history = train_ddpg_with_her(env)"
+        "actor, success_history, reward_history = train_ddpg_with_her(env)"
       ],
       "metadata": {
-        "id": "RFjtGaLkEg3H"
+        "id": "RFjtGaLkEg3H",
+        "outputId": "5f9812ed-f5d3-44fe-91d7-f37e348aa90e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Observation space: Dict('achieved_goal': Box(-inf, inf, (3,), float64), 'desired_goal': Box(-inf, inf, (3,), float64), 'observation': Box(-inf, inf, (10,), float64))\n",
+            "Action space: Box(-1.0, 1.0, (4,), float32)\n",
+            "Starting training...\n",
+            "Epoch 1/50, Success Rate: 0.00, Reward: -50.00\n",
+            "Epoch 2/50, Success Rate: 0.00, Reward: -50.00\n",
+            "Epoch 3/50, Success Rate: 0.00, Reward: -50.00\n",
+            "Epoch 4/50, Success Rate: 0.00, Reward: -50.00\n",
+            "Epoch 5/50, Success Rate: 0.04, Reward: -49.79\n",
+            "Epoch 6/50, Success Rate: 0.06, Reward: -49.64\n",
+            "Epoch 7/50, Success Rate: 0.17, Reward: -48.25\n",
+            "Epoch 8/50, Success Rate: 0.13, Reward: -48.20\n",
+            "Epoch 9/50, Success Rate: 0.23, Reward: -46.74\n",
+            "Epoch 10/50, Success Rate: 0.20, Reward: -46.61\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
