--- a/Group project/Project_4.ipynb
+++ b/Group project/Project_4.ipynb
@@ -105,7 +105,7 @@
         "id": "-Wfi_xhngw0_",
         "outputId": "e8eae7b3-5fb3-44fe-c4e1-9da0c32dcb20"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
         "from IPython.display import display\n",
         "from PIL import Image, ImageDraw, ImageFont\n",
         "\n",
-        "# Train\n",
+        "# Training\n",
         "import numpy as np\n",
         "import torch\n",
         "import torch.nn as nn\n",
@@ -163,7 +163,7 @@
         "import copy\n",
         "from collections import namedtuple\n",
         "\n",
-        "# Save the agent\n",
+        "# Saving the agent\n",
         "import os\n",
         "import pickle"
       ],
@@ -174,7 +174,7 @@
         "id": "34yIvql3mAWF",
         "outputId": "7c1388c4-a008-46cb-fe99-abed607a1cd9"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,13 +324,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# Initial plan: First tring in REACH, then check if the experience from it helps in solving PICK_AND_PLACE\n",
         "REACH = \"FetchReach-v3\" # easiest one, arm reaches to a point\n",
         "PICK_AND_PLACE = \"FetchPickAndPlace-v3\" # hardest one, arm reaches for the block, grabs it, reaches to a point"
       ],
       "metadata": {
         "id": "DtS59dk_pq3r"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -361,7 +362,7 @@
       "metadata": {
         "id": "HBTa20V7Cnrw"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -398,7 +399,7 @@
       "metadata": {
         "id": "7ZD6OCBgcaBt"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -412,7 +413,7 @@
       "metadata": {
         "id": "lRg-aK2ZjnF-"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -446,7 +447,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +505,7 @@
       "metadata": {
         "id": "M-Z45KTIERWa"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -551,12 +552,12 @@
         "            # Original experience with intended goal\n",
         "            self.store_transition(obs_dict, action, next_obs_dict, reward, done)\n",
         "\n",
-        "            # HER: For k random future states\n",
+        "            # HER: For k random future states (k=4 in our case)\n",
         "            if k > 0:\n",
         "                future_indices = np.random.randint(i, episode_len, size=min(k, episode_len-i))\n",
         "\n",
         "                for future_idx in future_indices:\n",
-        "                    future_obs_dict = self.episode_buffer[future_idx][2]  # Get the next observation at future step\n",
+        "                    future_obs_dict = self.episode_buffer[future_idx][2]  # get the next observation at future step\n",
         "                    achieved_goal = future_obs_dict[\"achieved_goal\"]\n",
         "\n",
         "                    # Use the future achieved goal as the desired goal\n",
@@ -620,7 +621,7 @@
       "metadata": {
         "id": "wTSR0ghzEUsw"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -649,12 +650,12 @@
         "        self.critic_target = copy.deepcopy(self.critic)\n",
         "        self.critic_optimizer = torch.optim.Adam(self.critic.parameters(), lr=0.001)\n",
         "\n",
-        "        self.max_action = max_action\n",
+        "        self.max_action = max_action # continuous action-values -> this is 1.0 for Fetch\n",
         "        self.replay_buffer = ReplayBuffer()\n",
         "\n",
-        "        self.batch_size = 128\n",
-        "        self.gamma = 0.98\n",
-        "        self.tau = 0.05\n",
+        "        self.batch_size = 128 # 256 in literature\n",
+        "        self.gamma = 0.98 # arbitrary - not excplicitely stated in literature?\n",
+        "        self.tau = 0.05 # 0.95 in literature? sorprisingly high - did they just provide a complement?\n",
         "\n",
         "    def select_action(self, observation, noise=0.1):\n",
         "        \"\"\"Select action based on observation dictionary\"\"\"\n",
@@ -715,7 +716,7 @@
       "metadata": {
         "id": "eqZs2BMEEXvl"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -748,15 +749,15 @@
         "\n",
         "    agent = DDPG_HER(state_dim, action_dim, goal_dim, max_action)\n",
         "\n",
-        "    # Training parameters - increased for better learning\n",
-        "    n_epochs = 50\n",
-        "    n_cycles = 50\n",
-        "    n_episodes = 16\n",
-        "    n_timesteps = 50\n",
+        "    # Training parameters\n",
+        "    n_epochs = 50 # from literature\n",
+        "    n_cycles = 50 # from literature\n",
+        "    n_episodes = 16 # arbitrary\n",
+        "    n_timesteps = 50 # arbitrary\n",
         "\n",
-        "    # For evaluation\n",
+        "    # For evaluation (direct comparison with paper)\n",
         "    success_history = []\n",
-        "    # and a typical learning curve\n",
+        "    # and a typical learning curve (as usually used in the course)\n",
         "    reward_history = []\n",
         "\n",
         "    # Start training\n",
@@ -777,7 +778,7 @@
         "\n",
         "                for t in range(n_timesteps):\n",
         "                    # Select action with noise for exploration\n",
-        "                    action = agent.select_action(obs_dict, noise=0.2)\n",
+        "                    action = agent.select_action(obs_dict, noise=0.2) # Gaussian with variance 0.2\n",
         "\n",
         "                    # Execute action\n",
         "                    next_obs_dict, reward, terminated, truncated, info = env.step(action)\n",
@@ -810,7 +811,7 @@
         "                    successes += 1\n",
         "\n",
         "            # Update policy after each cycle\n",
-        "            for _ in range(40):  # Increased updates per cycle\n",
+        "            for _ in range(40):  # 40 batches per cycle - matches literature\n",
         "                agent.train()\n",
         "\n",
         "        # Calculate success rate and rewards for this epoch\n",
@@ -830,7 +831,7 @@
       "metadata": {
         "id": "hHW4ypdpEdfq"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -855,7 +856,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -950,7 +951,7 @@
       "metadata": {
         "id": "k8VCf1wONwsU"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1100,7 +1101,7 @@
       "metadata": {
         "id": "cnwxqu6fEpvI"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1125,7 +1126,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1166,7 +1167,7 @@
       "metadata": {
         "id": "02Cv01VEfwfM"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1196,7 +1197,7 @@
           "height": 507
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1237,7 +1238,7 @@
           "height": 507
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
